[gd_scene load_steps=5 format=2]

[ext_resource path="res://actors/player/Player.gd" type="Script" id=1]
[ext_resource path="res://assets/sprites/Player.png" type="Texture" id=2]
[ext_resource path="res://assets/sprites/arms.png" type="Texture" id=3]

[sub_resource type="CapsuleShape2D" id=1]
radius = 3.0
height = 6.0

[node name="Player" type="KinematicBody2D"]
collision_mask = 13
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0, -8 )
texture = ExtResource( 2 )

[node name="Arms" type="Sprite" parent="."]
position = Vector2( 0, -8 )
texture = ExtResource( 3 )

[node name="ShellEject" type="Position2D" parent="Arms"]

[node name="ShootPoint" type="Position2D" parent="Arms"]
position = Vector2( 7, 0.5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -6 )
shape = SubResource( 1 )

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2( 0.2, 0.2 )

[node name="Label" type="Label" parent="."]
margin_left = -18.0
margin_top = -30.0
margin_right = 22.0
margin_bottom = -16.0

[node name="ShotDelay" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="ShellEjectTimer" type="Timer" parent="."]
wait_time = 0.25
one_shot = true

[connection signal="timeout" from="ShotDelay" to="." method="_on_ShotDelay_timeout"]
[connection signal="timeout" from="ShellEjectTimer" to="." method="_on_ShellEjectTimer_timeout"]
